frontend: fix conversion unit breaking on smaller screens
With large amonuts or many decimals (ETH transactions) the unit
broke onto newlines.

Fixed by making the unit not allow to shrink.

--- a/frontends/web/src/components/amount/conversion-amount.module.css
+++ b/frontends/web/src/components/amount/conversion-amount.module.css
@@ -20,6 +20,7 @@
 
 .txConversionAmount .txUnit {
   font-size: 12px;
+  flex-shrink: 0;
 }
 
 .txSmallInlineIcon img {
